--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,48 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# =============== #
+# Unity generated #
+# =============== #
+[Tt]emp/
+[Oo]bj/
+[Bb]uild
+/[Ll]ibrary/
+sysinfo.txt
+*.stackdump
+
+Hack-a-Mole/[Tt]emp/
+Hack-a-Mole/[Oo]bj/
+Hack-a-Mole/[Bb]uild
+Hack-a-Mole/[Ll]ibrary/
+Hack-a-Mole/sysinfo.txt
+Hack-a-Mole/*.stackdump
+
+[Bb]uilds
+ 
+# ============================================= #
+# Visual Studio / MonoDevelop / Rider generated #
+# ============================================= #
+[Ee]xported[Oo]bj/
+.vs/
+/*.userprefs
+/*.csproj
+/*.pidb
+/*.suo
+/*.sln*
+/*.user
+/*.unityproj
+/*.booproj
+/.idea*/
+ 
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store*
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+[Tt]humbs.db
+[Dd]esktop.ini
